[package]
edition = "2021"
name = "multithreading_client"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.43", features = ["derive"] }
futures = "0.3"
indicatif = "0.17"
reqwest = {version = "0.11", features = ["json", "stream"]}
tokio = {version = "1", features = ["full"]}
