[package]
authors = ["Matryoshka <17673942507@163.com>"]
edition = "2018"
name = "wasm-hash"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
blake3 = "1.3.3" # 使用 BLAKE3 代替 MD5
js-sys = "0.3.61" 
wasm-bindgen = "0.2.84" 

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1.7", optional = true}
md-5 = "0.10.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
codegen-units = 1 # 减少并行编译单元以提高优化
lto = true # 链接时优化
opt-level = 3 # 最大性能优化
